# coleccion_trading_hermes_polymarket

./: .env.example  .gitignore  PLAN_GENERAL.md  README.md  ROADMAP.md  SPEC_MVP.md  pyproject.toml
config/: AION_POLYMARKET_CONTROL.yaml
docs/: FAST_MARKET_STRATEGY.md  HERMES_CRON.md  LECTURA_CONTEXTO_FUENTES.md  PAPER_TRADING.md
output/businesses/: INDEX.md  (+2 more)
repos/: 666ghj_MiroFish.md  DFZinc_JANUS.md  DevvGwardo_polymarket-dashboard-skill.md  Fincept-Corporation_FinceptTerminal.md  PacktPublishing_Machine-Learning-for-Algorithmic-Trading-Bots-with-Python.md  TheFourGreatErrors_alpha-rptr.md  TradeAIcode_BOT-DE-TRADING.md  coding-kitties_investing-algorithm-framework.md  criss201x_Trading_inteligente_con_algoritmos_de_aprendizaje_automatico.md  josepobletem_cripto_trader.md  strongmandisabilitypayment539_hermes-geopolitical-market-sim.md  tudorelu_pyjuque.md
scripts/: add_more_businesses_output.py  create_business_output.py  create_cold_outreach_leads.py  create_react_frontends.py  cron_paper_update_quiet.sh  cron_polymarket_scan.sh  deepen_business_scaffolds.py  enrich_business_output.py  ensure_extended_business_docs.py  paper_performance.py  scaffold_admin_frontends.py  scaffold_fastapi_backends.py  scan_markets.py  scan_polymarket.sh  update_paper_positions.py
sintesis/: 20260608_agente_de_tradingpredicción_con_Hermes_y_Polymarke.md
specs/: AION_EXECUTION_GATEWAY.md  CASH_OUT_PROTOCOL.md  LONG_HORIZON_STRATEGY_MODE.md  RISK_POLICY.md
tests/: test_db.py  test_models_and_scorer.py  test_paper_performance.py  test_paper_resolver.py  test_paper_trading.py
(+759 files in other folders)
